ix Safari Mixed Content & Configure CORS via Env and Align Example Environment Files
Goal 1: Ensure frontend API calls use HTTPS via Nginx proxy and backend allows the correct origin.
Files Modified:
frontend/.env: Set REACT_APP_API_URL=https://localhost.
frontend/src/types/index.ts: Added LoginResponse interface.
frontend/src/services/api.ts: Added api.login method using publicClient and updated API_URL default.
frontend/src/services/auth.ts: Modified login function to use api.login and handle direct response; removed unused API_URL constant.
backend/app/main.py: Modified CORSMiddleware setup to read allow_origins from BACKEND_CORS_ORIGINS environment variable, defaulting to ["*"]. Added comments.
backend/.env: Added BACKEND_CORS_ORIGINS='["https://localhost"]'. (User applied this based on guidance).

Goal 2: Ensure .env.example files accurately reflect required variables and current local setup defaults.
Files Modified:
backend/.env.example: Updated LLM_MODEL default to gemini-pro, uncommented and updated BACKEND_CORS_ORIGINS example and comments.
frontend/.env.example: Updated REACT_APP_API_URL to https://localhost and added explanatory comments.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,7 +7,7 @@ DATABASE_URL=postgresql://postgres:password@db:5432/katalyst_assistant
 # Your API key for Google Gemini
 GEMINI_API_KEY=YOUR_GEMINI_API_KEY_HERE
 # The specific Gemini model to use (e.g., gemini-pro, gemini-1.5-flash)
-LLM_MODEL=gemini-pro
+LLM_MODEL=gemini-pro # Updated default example
 
 # --- JWT Authentication Settings ---
 # A strong, random secret key for signing JWT tokens.
@@ -16,5 +16,9 @@ SECRET_KEY=YOUR_STRONG_RANDOM_SECRET_KEY
 # Token expiration time in minutes
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# Note: CORS is currently configured in main.py to allow all origins ("*").
-# The BACKEND_CORS_ORIGINS variable is not used by default.
+# --- CORS Configuration ---
+# A JSON string array of allowed origins for CORS.
+# For local development with Nginx proxy: '["https://localhost"]'
+# For production: '["https://your-frontend-domain.com"]'
+# If left empty or unset, defaults to allowing all origins ("*").
+BACKEND_CORS_ORIGINS='["https://localhost"]'
