--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,1 +1,4 @@
-REACT_APP_API_URL=http://localhost:8000 
+# Base URL for the backend API, accessed via the Nginx proxy
+# For local Docker setup with Nginx handling HTTPS: https://localhost
+# For production deployment (e.g., Cloud Run): https://your-backend-service.run.app
+REACT_APP_API_URL=https://localhost
