--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,8 +6,8 @@ DATABASE_URL=postgresql://postgres:password@db:5432/katalyst_assistant
 # --- LLM Configuration ---
 # Your API key for Google Gemini
 GEMINI_API_KEY=YOUR_GEMINI_API_KEY_HERE
-# The specific Gemini model to use (e.g., gemini-pro, gemini-1.5-flash)
-LLM_MODEL=gemini-pro # Updated default example
+# The specific Gemini model to use (e.g., gemini-2.0-flash-lite, gemini-1.5-flash)
+LLM_MODEL=gemini-2.0-flash-lite # Updated default example
 
 # --- JWT Authentication Settings ---
 # A strong, random secret key for signing JWT tokens.
