Added enhanced security features

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -22,3 +22,22 @@ ACCESS_TOKEN_EXPIRE_MINUTES=30
 # For production: '["https://your-frontend-domain.com"]'
 # If left empty or unset, defaults to allowing all origins ("*").
 BACKEND_CORS_ORIGINS='["https://localhost"]'
+
+# Security
+COOKIE_DOMAIN=.your-domain.com  # Domain for cookies (e.g., .example.com for *.example.com)
+
+# Rate Limiting
+RATE_LIMIT_ENABLED=true
+RATE_LIMIT_DEFAULT=60/minute
+RATE_LIMIT_LOGIN=5/minute
+RATE_LIMIT_REGISTER=2/hour
+RATE_LIMIT_LOGOUT=5/minute
+RATE_LIMIT_QUERY=30/minute
+RATE_LIMIT_PUBLIC_QUERY=15/minute
+RATE_LIMIT_CREATE_SESSION=30/minute
+RATE_LIMIT_UPDATE_SESSION=20/minute
+RATE_LIMIT_DELETE_SESSION=20/minute
+
+# Guest Mode Configuration
+GUEST_MODE_ENABLED=true # Set to false to disable guest access
+RATE_LIMIT_UPDATE_MESSAGE=20/minute
