Updated the code to use Asynchronous DB operations

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,11 @@
 # --- Database Configuration ---
-# Connection string for the PostgreSQL database used by the application.
-# Example for Docker Compose setup: postgresql://<user>:<password>@<service_name>:<port>/<db_name>
-DATABASE_URL=postgresql://postgres:password@db:5432/katalyst_assistant
+# Individual components for the database connection.
+# Used to construct the connection string dynamically in database.py.
+DB_USER=your_db_user
+DB_PASSWORD=your_db_password # Use secrets management in production!
+DB_HOST=your_db_host # e.g., localhost, db service name, or cloud instance IP/DNS
+DB_PORT=5432 # Default PostgreSQL port
+DB_NAME=your_db_name
 
 # --- LLM Configuration ---
 # Your API key for Google Gemini
