--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,7 +7,8 @@ passlib>=1.7.4
 bcrypt>=4.0.1
 python-multipart>=0.0.6
 sqlalchemy>=2.0.20
-psycopg2-binary>=2.9.7
+psycopg2-binary>=2.9.7 # Standard sync driver, might still be needed by scripts
+asyncpg>=0.28.0 # Async driver for PostgreSQL
 pydantic>=2.3.0
 aiohttp>=3.9.0
 tenacity>=8.2.0
